Filled initial people values

--- a/config.toml
+++ b/config.toml
@@ -113,7 +113,7 @@ github_repo = "https://github.com/ageo/lmru-technology"
 algolia_docsearch = false
 
 # Enable Lunr.js offline search
-offlineSearch = false
+offlineSearch = true
 
 # User interface configuration
 [params.ui]
