--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Install dependencies
-        run: npm i -D --save autoprefixer && npm i -D --save postcss-cli && npm i -D @fullhuman/postcss-purgecss
+        run: npm i -D --save autoprefixer && npm i -D --save postcss-cli
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
