--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ anchor = "smart"
 [services]
 [services.googleAnalytics]
 # Comment out the next line to disable GA tracking. Also disables the feature described in [params.ui.feedback].
-id = "GTM-TWVZ2P9"
+id = "G-EJPYBKPS1Q"
 
 # Language configuration
 
