--- a/.github/workflows/generate-stack.yml
+++ b/.github/workflows/generate-stack.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - run: npm install -g js-yaml
+      - run: npm install js-yaml
       - run: node .github/workflows/generate-stack/generator.js
