--- a/.github/workflows/generate-stack.yml
+++ b/.github/workflows/generate-stack.yml
@@ -10,3 +10,9 @@ jobs:
           node-version: '14'
       - run: npm install js-yaml
       - run: node .github/workflows/generate-stack/generator.js
+      - name: Update the file
+        uses: EndBug/add-and-commit@v7 
+        with:
+          author_name: Adeo Stack Generator
+          author_email: noreply@adeo.com
+          message: 'Generated stack file for Adeo'
